appId: com.gunnchos.animeaggressors
---
- launchApp
- tapOn: "Play"
- tapOn: "Ember"
- tapOn: "Female"
